problemas con emails y telefonos de contactos

--- a/style.css/styleContact.css
+++ b/style.css/styleContact.css
@@ -22,6 +22,15 @@
     font-family: Raleway;
 }
 .h2{
+    font-family: Raleway;
+    font-size: 20px;
+}
+h3{
+    font-size: 20px;
+    font-family: Raleway;
+    color: mediumseagreen;
+}
+p{
+    font-size: 10px;
     font-family: Open Sans;
-    font-size: 30px;
 }
